# c-google-maps-extractor

./: .gitignore  CMakeLists.txt  README.md
build-linux/: Makefile  PlacesAPI  cmake_install.cmake
build-windows/: Makefile  cmake_install.cmake
src/: file.c  helpers.c  main.c  parser.c  places.c  simpleparse.c
src/headers/: file.h  helpers.h  parser.h  places.h  simpleparse.h
